--- a/AppiumProject/report/2019-06-02 11_09_37_testReport.html
+++ b/AppiumProject/report/2019-06-02 11_09_37_testReport.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>惠三秦UI自动化测试</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2019-05-30 23:17:36</p>
-<p class='attribute'><strong>运行时长:</strong> 0:05:43.130072</p>
-<p class='attribute'><strong>状态:</strong> 通过 1 失败 3</p>
+    <p class='attribute'><strong>开始时间:</strong> 2019-06-02 11:09:37</p>
+<p class='attribute'><strong>运行时长:</strong> 0:05:31.255064</p>
+<p class='attribute'><strong>状态:</strong> 通过 1 失败 2 错误 1</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'>惠三秦Android端测试用例执行结果</p></div>
@@ -211,12 +211,12 @@
             <td>查看</td>
         </tr>
         
-    <tr class='failClass'>
+    <tr class='errorClass'>
         <td>test_login.TestLogin: 登录模块</td>
         <td>4</td>
         <td>1</td>
-        <td>3</td>
-        <td>0</td>
+        <td>2</td>
+        <td>1</td>
         <td><a href="javascript:showClassDetail('c1',4)">详情</a></td>
     </tr>
 
@@ -260,16 +260,35 @@ AssertionError: False is not true : login fail
 </tr>
 
 <tr id='ft1.4' class='none'>
-    <td class='failCase'><div class='testcase'>test_phone_null: 用户名为空</div></td>
+    <td class='errorCase'><div class='testcase'>test_phone_null: 用户名为空</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
     <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.4')" >
-        失败</a>
+        错误</a>
     <div id='div_ft1.4' class="popup_window">
         <pre>ft1.4: Traceback (most recent call last):
-  File "D:\PythonAppium\AppiumProject\test_case\test_login.py", line 24, in test_phone_null
-    self.assertTrue(logn.check_login_status(),"login fail")
-AssertionError: False is not true : login fail
+  File "D:\PythonAppium\AppiumProject\test_case\test_login.py", line 23, in test_phone_null
+    logn.loginView(data[0], data[1])
+  File "D:\PythonAppium\AppiumProject\pageObject\loginPage.py", line 55, in loginView
+    self.getScreenshot("login")
+  File "D:\PythonAppium\AppiumProject\common\common_func.py", line 54, in getScreenshot
+    self.driver.get_screenshot_as_file(image_file)
+  File "D:\python project\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1032, in get_screenshot_as_file
+    png = self.get_screenshot_as_png()
+  File "D:\python project\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1064, in get_screenshot_as_png
+    return base64.b64decode(self.get_screenshot_as_base64().encode('ascii'))
+  File "D:\python project\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1074, in get_screenshot_as_base64
+    return self.execute(Command.SCREENSHOT)['value']
+  File "D:\python project\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
+    self.error_handler.check_response(response)
+  File "D:\python project\lib\site-packages\appium\webdriver\errorhandler.py", line 29, in check_response
+    raise wde
+  File "D:\python project\lib\site-packages\appium\webdriver\errorhandler.py", line 24, in check_response
+    super(MobileErrorHandler, self).check_response(response)
+  File "D:\python project\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
+    raise exception_class(message, screen, stacktrace)
+selenium.common.exceptions.WebDriverException: Message: An unknown server-side error occurred while processing the command. Original error: Could not proxy command to remote server. Original error: The request to /screenshot has failed
+
 </pre>
     </div>
     <!--css div popup end-->
@@ -280,8 +299,8 @@ AssertionError: False is not true : login fail
             <td>总计</td>
             <td>4</td>
             <td>1</td>
-            <td>3</td>
-            <td>0</td>
+            <td>2</td>
+            <td>1</td>
             <td>&nbsp;</td>
         </tr>
     </table>
@@ -315,8 +334,8 @@ AssertionError: False is not true : login fail
                     center: ['50%', '60%'],
                     data:[
                         {value:1, name:'通过'},
-                        {value:3, name:'失败'},
-                        {value:0, name:'错误'}
+                        {value:2, name:'失败'},
+                        {value:1, name:'错误'}
                     ],
                     itemStyle: {
                         emphasis: {
