--- a/AppiumProject/report/2019-06-02 11_37_50_testReport.html
+++ b/AppiumProject/report/2019-06-02 11_37_50_testReport.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>惠三秦UI自动化测试</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2019-05-30 22:26:44</p>
-<p class='attribute'><strong>运行时长:</strong> 0:04:47.159965</p>
-<p class='attribute'><strong>状态:</strong> 通过 4</p>
+    <p class='attribute'><strong>开始时间:</strong> 2019-06-02 11:37:50</p>
+<p class='attribute'><strong>运行时长:</strong> 0:01:25.327335</p>
+<p class='attribute'><strong>状态:</strong> 失败 1</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'>惠三秦Android端测试用例执行结果</p></div>
@@ -211,40 +211,37 @@
             <td>查看</td>
         </tr>
         
-    <tr class='passClass'>
+    <tr class='failClass'>
         <td>test_login.TestLogin: 登录模块</td>
-        <td>4</td>
-        <td>4</td>
+        <td>1</td>
         <td>0</td>
+        <td>1</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c1',4)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c1',1)">详情</a></td>
     </tr>
 
-<tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_normal_case: 正常用例</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='pt1.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_paawd_null: 密码为空</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='pt1.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_err: 用户名或密码错误</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='pt1.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_null: 用户名为空</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft1.1' class='none'>
+    <td class='failCase'><div class='testcase'>test_phone_null: 用户名为空</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.1')" >
+        失败</a>
+    <div id='div_ft1.1' class="popup_window">
+        <pre>ft1.1: Traceback (most recent call last):
+  File "D:\PythonAppium\AppiumProject\test_case\test_login.py", line 25, in test_phone_null
+    self.assertTrue(logn.check_login_status(),"login fail")
+AssertionError: False is not true : login fail
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
         <tr id='total_row'>
             <td>总计</td>
-            <td>4</td>
-            <td>4</td>
+            <td>1</td>
             <td>0</td>
+            <td>1</td>
             <td>0</td>
             <td>&nbsp;</td>
         </tr>
@@ -278,8 +275,8 @@
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:4, name:'通过'},
-                        {value:0, name:'失败'},
+                        {value:0, name:'通过'},
+                        {value:1, name:'失败'},
                         {value:0, name:'错误'}
                     ],
                     itemStyle: {
